<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Sign.RegisterWithGoogleActivity">

    <ImageView
        android:id="@+id/bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ganyu"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg_login"
        app:layout_constraintEnd_toEndOf="@+id/bg_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg_login"
        android:id="@+id/appName"
        app:layout_constraintVertical_bias=".15"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:textColor="#FBFBFB"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:id="@+id/title_login"/>

    <EditText
        android:textColor="@color/blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        android:maxLines="1"
        android:ems="10"
        android:padding="12dp"
        android:drawableStart="@drawable/custom_password_icon"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_login"
        app:layout_constraintWidth_percent=".8"
        android:drawablePadding="14dp"
        android:layout_marginTop="30dp"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/btn_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".1"/>

</androidx.constraintlayout.widget.ConstraintLayout>