<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragment.ProfileFragment"
    android:paddingTop="90dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/infor_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".9" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".1"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".3" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.134"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:layout_constraintVertical_bias="0.3" />

                <ImageView
                    android:id="@+id/iv_edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias=".9"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/properties"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="8dp"
            android:background="@color/blue"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infor_user" />

        <RelativeLayout
            android:id="@+id/cv_properties"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_properties">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:id="@+id/ll_total_message">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Total Message:"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_total_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_below="@+id/ll_total_message">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Links:"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_links"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_account"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="8dp"
            android:background="@color/blue"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_properties" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_switch_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Switch to Other Account"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:padding="8dp"
                    android:textColor="@color/blue"/>

                <TextView
                    android:id="@+id/btn_log_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:padding="8dp"
                    android:textColor="@color/red"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>